2001-04-15 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Moved public headers from cppunit into new subdir include/cppunit.
	  This should make more clear which headers are used internally only
	  (like estring.h).
	
	* Moved autoconf auxiliary stuff into new subdir config, to make the
	  top dir less crowded.
	
2001-04-14 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 1.5.4
	
	* Added support for RPM generation.
	
	* Added autoconf support for Doxygen document generation: 
	  Doxygen and GraphViz dot are automatically detected and LaTeX and
	  HTML can be switch on or off.
	
	* cppunit/TextTestResult.cpp: changed cout to stream. 
	  Fixes bug #232636

	* cppunit/TextTestReulst.cpp: add '#include <iostream>'.
	  Fixes bug #223290
	
	* cppunit/*.cpp: removed bogus 'inline' specifiers.
	  Fixes bug #224542 and #223291.

	* doc/header.html: corrected link to CppUnit project page
	  Fixes bug #414073

	* cppunit/*.cpp, examples/hierarchy/main.cpp: removed all 
	  'using namespace ...' occurences. 
	
2001-01-31 Tim Jansen <timj@systembureau.com>

	* cppunit/TestCase.cpp, cppunit/TestCase.h, cppunit/TestSuite.h, 
	  cppunit/TestSuite.cpp: applied patch #402271 by bwithrow. 
	  Fixes bug #220207

	* cppunit/TestSuite.cpp (deleteContents): clear vector after contents 
	  have been deleted (so there are no invalid pointers in the vector)
	  Patch #403540 / #403542
	
	* cppunit/TestCaller.h: create Fixture with empty constructor so that 
	  only the TestCaller but not the Fixture instance is registered in
	  the TestRegistry
	  Patch #403541 / #403542
 
 	* examples/hierarchy/BoardGameTest.h, examples/hierarchy/ChessTest.h,
 	  examples/hierarchy/main.cpp: initialize example TestCases with 
          TestSuite so that the TestCallers are registered in the TestRegistry
	  Patch #403542. Fixes bug #415249
 
 	* cppunit/TestCaller.h, cppunit/TestCase.cpp, cppunit/TestCase.h: 
 	  changed documentation; made hopefully clearer which constructor 